# Ragstack

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  RAGSTACK_BLUEPRINT.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/: config.py  main.py
backend/agent/: graph.py  state.py  tools.py
backend/agent/nodes/: generator.py  guardrails.py  retriever.py  router.py  web_search.py
backend/api/: admin.py  chat.py  evaluate.py  ingest.py
backend/guardrails/: __init__.py  hallucination.py  input_validator.py  pii_redactor.py  token_budget.py
backend/ingestion/: chunker.py  embedder.py  metadata.py  parser.py  vision.py
backend/models/: conversation.py  document.py
backend/observability/: datasets.py  evaluators.py  tracing.py
backend/retrieval/: __init__.py  hybrid.py  keyword_store.py  reranker.py  vector_store.py
backend/utils/: llm_router.py  providers.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DESIGN_DECISIONS.md
eval/: compare.py  run_eval.py
eval/datasets/: golden_qa.json
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatWindow.tsx  SourcePanel.tsx  UploadZone.tsx
frontend/src/lib/: api.ts  types.ts
sample_docs/: api_documentation.txt  architecture_meeting_notes.txt  quarterly_revenue.csv  rag_technical_overview.txt
scripts/: seed_data.py
terraform/: cloud_run.tf  main.tf  variables.tf
tests/: conftest.py  test_agent.py  test_api.py  test_guardrails.py  test_ingestion.py  test_retrieval.py
