[project]
name = "ragstack"
version = "0.1.0"
description = "Agentic RAG platform with multi-modal document understanding, hybrid search, LangSmith observability, guardrails, and cloud-native deployment."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [{name = "Laksh"}]

dependencies = [
    # Core framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",

    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-cohere>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-experimental>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",

    # Vector & search
    "qdrant-client>=1.11.0",
    "langchain-qdrant>=0.1.0",
    "elasticsearch>=8.15.0",

    # Document parsing
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "tabulate>=0.9.0",

    # Embeddings & reranking
    "cohere>=5.0.0",
    "tiktoken>=0.7.0",

    # Guardrails
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",

    # Web search
    "tavily-python>=0.4.0",

    # Infrastructure
    "redis>=5.0.0",
    "aiofiles>=24.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
# strict = true is intentionally off: LangChain, Presidio, and qdrant-client
# have incomplete stubs; enabling strict here produces 100+ false-positive
# errors from third-party libraries that are otherwise well-tested.

[[tool.mypy.overrides]]
module = [
    "backend.guardrails.pii_redactor",
    "backend.utils.providers",
    "backend.utils.llm_router",
    "backend.ingestion.vision",
    "backend.ingestion.embedder",
    "backend.retrieval.vector_store",
    "backend.ingestion.chunker",
]
ignore_errors = true
